--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,3 +1,8 @@
-.app {
+.appWrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 16px;
+
+  padding-bottom: 24px;
   text-align: center;
 }
