--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,15 @@ svg {
 ul,
 ol {
   list-style: none;
+
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  all: unset;
+
+  font-family: inherit;
+
+  cursor: pointer;
 }
