--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@
 }
 
 body {
+  width: 100%;
+  height: 100vmax;
+
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,6 +18,7 @@ body {
 }
 
 img,
+picture,
 svg {
   width: 100%;
   height: auto;
@@ -29,8 +34,21 @@ ol {
   padding: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 button {
   all: unset;
+
+  margin: 0;
+  padding: 0;
 
   font-family: inherit;
 
