--- a/src/components/GalleryItem/GalleryItem.module.scss
+++ b/src/components/GalleryItem/GalleryItem.module.scss
@@ -7,7 +7,7 @@
 }
 
 .itemImg {
-  height: 100%;
+  height: 260px;
 
   object-fit: cover;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
